--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -58,7 +58,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../black.exe"
+export_path="../find_me.exe"
 patches=PackedStringArray()
 patch_delta_encoding=false
 patch_delta_compression_level_zstd=19
